--- a/frontend/src/pages/User/ToDoList/ToDoList.module.css
+++ b/frontend/src/pages/User/ToDoList/ToDoList.module.css
@@ -7,8 +7,10 @@
 }
 
 .toDoContainer {
-    width: 200px;
-    background: linear-gradient(to right, #3b3b3b, #272A30, #3f3f3f);    border: 2px solid white;
+    width: 250px;
+    height: 150px;
+    background: linear-gradient(to bottom, #3b3b3b, #272A30);
+    border: 2px solid white;
     border-radius: 10px;
     padding: 10px;
     display: flex;
@@ -21,6 +23,36 @@
         transition: all ease-in-out .3s;
         transform: scale(1.10);
     }
+}
+
+.toDoTitle {
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.toDoDeadline {
+    color: #767676;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.toDoCategory {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.categoryColor {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+}
+
+.categoryName {
+    color: #767676;
+    font-weight: 600;
 }
 
 .emptyListMessage {
@@ -120,7 +152,7 @@
     flex-direction: column;
     width: 100%;
     border-radius: 8px;
-    padding: 8px;
+    padding: 20px;
     gap: 25px;
 }
 
@@ -138,7 +170,19 @@
     gap: 20px;
 }
 
+.formGroupCol {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    width: 100%;
+}
+
 .label {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 10px;
     color: #757575;
     font-weight: 600;
 }
@@ -200,4 +244,73 @@ input:checked + .slider:before {
 .isDoneLabel {
     color: white;
     font-weight: 600;
+}
+
+.absoluteSection {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    display: absolute;
+}
+
+.actionsContainer {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 70%;
+    left: 90%;
+    gap: 20px;
+    height: fit-content;
+}
+
+.createCategory {
+    background-color: #272A30;
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    aspect-ratio: 1/1;
+    width: fit-content;
+    height: fit-content;
+
+    &:hover {
+        cursor: pointer;
+        transition: all ease-in-out .3s;
+        transform: scale(1.10);
+    }
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.createTask {
+    background-color: #8553FD;
+    border: none;
+    border-radius: 50%;
+    padding: 15px;
+    display: flex;
+    aspect-ratio: 1/1;
+
+    &:hover {
+        cursor: pointer;
+        transition: all ease-in-out .3s;
+        transform: scale(1.10);
+    }
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.iconCategory {
+    width: 25px;
+    height: 25px;
+}
+
+.iconToDo {
+    width: 45px;
+    height: 45px;
 }
